# job-market

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest-report.html  pytest.ini  requirements.txt  sonar-project.properties
.github/: CODEOWNERS
.github/workflows/: _quality-gates.yml  backup.yml  main.yml  staging.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
JobApp/: admin.py  apps.py  filters.py  managers.py  mixins.py  models.py  pagination.py  permissions.py  serializers.py
JobApp/migrations/: 0001_initial.py  0002_alter_city_zip_code.py  0002_alter_user_phone_number.py  0002_city_country_remove_employerlocation_country_and_more.py  0002_rename_contract_type_contracttype_name.py  0003_remove_user_country_remove_user_province_and_more.py  0003_rename_country_country_name.py  0003_rename_remote_type_remotenesslevel_name.py  0003_user_is_candidate_user_is_employer.py  0004_alter_employer_website_url.py  0004_rename_city_city_name.py  0004_rename_seniority_level_seniority_name.py  0005_alter_user_groups_alter_user_user_permissions.py  0005_alter_user_managers_alter_user_email_and_more.py  0006_alter_user_groups_alter_user_user_permissions.py  0006_alter_user_options_remove_user_date_joined_and_more.py  0007_alter_candidate_resume.py  0007_alter_user_city.py  0008_alter_candidate_resume.py  0008_benefit_alter_candidateeducation_is_current_and_more.py  0009_alter_candidate_resume.py  0009_remove_user_is_candidate_remove_user_is_employer.py  0010_alter_joboffer_contract_alter_joboffer_remoteness_and_more.py  0011_alter_candidate_resume.py  0012_alter_joboffer_contract_alter_joboffer_remoteness_and_more.py  0013_alter_offerresponse_unique_together.py  0014_alter_candidate_resume.py  0015_alter_employer_website_url.py  0016_remove_employer_benefits_employerbenefit.py  0017_alter_employer_company_name.py  0018_joboffer_created_at.py  0019_remove_joboffer_skills.py  0020_alter_joboffer_seniority.py
JobApp/tests/: test_candidate_views.py  test_employer_views.py  test_job_views.py  test_models.py  test_user_views.py
JobApp/urls/: candidate_urls.py  employer_urls.py  job_urls.py  user_urls.py
JobApp/views/: candidate_views.py  employer_views.py  job_views.py  user_views.py
JobMarket2/: asgi.py  settings.py  urls.py  wsgi.py
data/base/13468/: 1247  1249  (+158 more)
data/global/: pg_control  pg_internal.init
data/pg_stat/: db_0.stat  db_13468.stat  global.stat
docs/: candidate_docs.py  employer_docs.py  job_docs.py  user_docs.py
k8s/: ConfigMap.yaml  Deployment.yaml  LoadBalancer.yaml
load_tests/: .env.example  Dockerfile-locust  README.md  __init__.py  accounts.py  auth.py  config.py  http_utils.py  locustfile.py  reference_data.py
load_tests/journeys/: __init__.py  candidate.py  candidate_jobs.py  candidate_profile.py  candidate_with_registration.py  candidate_without_registration.py  common.py  employer.py  employer_jobs.py  employer_profile.py  employer_with_registration.py  employer_without_registration.py
load_tests/users/: base.py
tests/: test_candidate_views.py  test_employer_views.py  test_job_views.py  test_user_views.py
(+8 files in other folders)
