[project]
name = "job-market"
version = "0.1.0"
description = ""
authors = [
    { name = "Patryk Antonik" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "asgiref (==3.8.1)",
    "attrs (==25.3.0)",
    "django (==5.1.15)",
    "django-cors-headers (==4.3.1)",
    "django-filter (==25.1)",
    "django-phone-field (==1.8.1)",
    "djangorestframework (==3.15.1)",
    "djangorestframework-simplejwt (==5.3.1)",
    "drf-spectacular (==0.28.0)",
    "inflection (==0.5.1)",
    "iniconfig (==2.0.0)",
    "jsonschema (==4.23.0)",
    "jsonschema-specifications (==2024.10.1)",
    "packaging (==24.2)",
    "pluggy (==1.5.0)",
    "psycopg2-binary (==2.9.9)",
    "pyjwt (==2.8.0)",
    "pyyaml (==6.0.2)",
    "referencing (==0.36.2)",
    "rpds-py (==0.24.0)",
    "sqlparse (==0.5.4)",
    "typing-extensions (==4.13.1)",
    "tzdata (==2024.1)",
    "uritemplate (==4.1.1)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
exclude = [
    "docs",
    "tests",
    "migrations",
    "./*/migrations",
    "./**/migrations",
    "./JobApp/admin.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "DJ"]

[tool.isort]
profile = "black"
known_first_party = ["JobApp"]
force_sort_within_sections = true
combine_as_imports = true
lines_after_imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.11.1"
pytest-xdist = "^3.8.0"
faker = "^37.5.3"
python-dotenv = "^1.1.1"
isort = "^6.0.1"
black = "^25.1.0"
pylint = "^3.3.7"
pylint-django = "^2.6.1"
pre-commit = "^4.2.0"
ruff = "^0.12.8"
pytest-cov = "^6.2.1"
pytest-html = "^4.1.1"

[tool.poetry.group.load-testing.dependencies]
locust = "^2.41.5"
